--- a/templates/feed-model.html
+++ b/templates/feed-model.html
@@ -1,16 +1,34 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-Formulaire pour tester le modèle de reconnaissante de chiffres.
+Formulaire pour tester le modèle de reconnaissance de chiffres.
+{% endblock %}
+
+{% block h1%}
+Lecture d'une image de digit
 {% endblock %}
 
 {% block content %}
 
-<h1>MNIST Digit Recognition</h1>
-<form method="post" enctype="multipart/form-data">
-    <label for="file">Upload Image:</label>
-    <input type="file" name="file" accept=".png, .jpg, .jpeg" required>
-    <button type="submit">Predict Digit</button>
-</form>
 
+<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{url_for('bienvenue')}}">Accueil</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Lecture de l'image</li>
+    </ol>
+</nav>
+
+<main class="container p-4 overflow-hidden text-center" style="min-height: 56vh">
+
+    <h2 class="p-3">Chargez une image:</h2>
+    <div class="row justify-content-center">
+        <div class="col-10 col-sm-8 col-md-6 text-center">
+            <form method="post" enctype="multipart/form-data">
+                <input type="file" name="file" accept=".png, .jpg, .jpeg" class="form-control" required>
+                <button type="submit" class="btn btn-primary mt-4">Predict Digit</button>
+            </form>
+        </div>
+    </div>
+
+</main>
 {% endblock %}
