--- a/templates/logs.html
+++ b/templates/logs.html
@@ -19,7 +19,7 @@ Logs Réalisés
 
 <main class="container p-4 overflow-hidden" style="min-height: 56vh">
     <h2 class="h4 pb-2">Liste des Logs Réalisés</h2>
-    <div class="content">
+    <div class="content" style="font-size: 0.8rem">
         <table class="table table-striped table-responsive w-100">
             <thead>
                 <tr>
